Fixes touch on iOS.

--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -4,6 +4,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    user-select: none;
     overflow: hidden;
+    cursor: pointer;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
 }
